Java revision